Fix for crash with full-page plugins on Mac bug 74934 r=kmcclusk sr=roc+moz